packages/idris_db/test/errors/class/abstract.dart
// must not be abstract

import 'package:idris_db/idris_db.dart';

@collection
abstract class Model {
  late int id;
}
